[tool.poetry]
name = "blog-flask"
version = "0.1.0"
description = ""
authors = ["rymyung <rymyung@hanmail.net>"]
readme = "README.md"
packages = [{include = "blog_flask"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
flask = "^2.3.2"
pymysql = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
